--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,11 @@
 {
-  "name": "KageNikki",
+  "name": "KageNikki Ultimate",
   "short_name": "KageNikki",
-  "start_url": "/",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#071025",
-  "theme_color": "#071025",
+  "background_color": "#0f1724",
+  "theme_color": "#7dd3fc",
   "icons": [
-    {
-      "src": "icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "assets/icons/sticker1.png", "sizes": "192x192", "type": "image/png" }
   ]
 }
